--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 This is a networked battleship game done in Java. The communication between the server and client computer is done through sockets.
-There are 2 folders with the project files for Eclipse, one of them is the client, the other one is the server.		
+There are 2 folders with the project files, one of them is the client, the other one is the server.		
 
